--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,32 @@
 set-option -g prefix C-a
-unbind C-b
 bind-key C-a last-window
 #bind-key C-a send-prefix
 bind a send-prefix
-set-option -g status-style bg=blue
+#set-option -g status-style bg=blue
+unbind 'C-\'
+#set-option -g prefix 'C-\'
+#set-option -g prefix "C-\\"
+
+# Status bar
+# colors
+set -g status-bg black
+set -g status-fg white
+
+# alignment
+set-option -g status-justify centre
+
+# spot at left
+set-option -g status-left '#[bg=black,fg=green][#[fg=cyan]#S#[fg=green]]'
+set-option -g status-left-length 20
+
+# window list
+setw -g automatic-rename on
+set-window-option -g window-status-format '#[dim]#I:#[default]#W#[fg=grey,dim]'
+set-window-option -g window-status-current-format '#[fg=cyan,bold]#I#[fg=blue]:#[fg=cyan]#W#[fg=dim]'
+
+# spot at right
+set -g status-right '#[fg=green][#[fg=cyan]%Y-%m-%d#[fg=green]]'
+
+#bind -n Pageup copy-mode -u
+bind -n S-Pageup send-keys Pageup
+bind -n S-Pagedown send-keys Pagedown
