--- a/.inputrc
+++ b/.inputrc
@@ -2,4 +2,7 @@
 "\e[A":history-search-backward
 ## arrow down
 "\e[B":history-search-forward
-
+## arrow left
+"\e[1;5C": forward-word
+## arrow right
+"\e[1;5D": backward-word
